--- a/style.css
+++ b/style.css
@@ -1,17 +1,27 @@
 .container {
-    display: grid;
-    grid-template-areas: 
-        "form form form"
-        "library library library"
-        "library library library"
-        "library library library"
-                    
+
 }
 
 .form {
-    grid-area: form;
+   display: flex;
+   justify-content: space-around;
+   flex-direction:row;
 }
 
 .library {
-    grid-area: library;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr)
 }
+
+.library-card {
+    padding: 75px;
+    background-color: lightgrey;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.library-card-button {
+    width: 100px;}
