--- a/style.css
+++ b/style.css
@@ -1,26 +1,59 @@
-.container {
+body {
+    background-color:lightskyblue;
+}
 
+.container {
 }
 
 .form {
-   display: grid;
+   display: flex;
    justify-content: center;
+   justify-items: center;
    align-content: center;
+   height:30px;
+   background-color: lightskyblue;
+   padding: 30px;
+   gap:10px;
+   font-family:Arial, Helvetica, sans-serif;
+   font-weight: 500;
+
+}
+
+input[type=text] {
+    border-radius: 10px;
+    width:15rem;
 }
 
 .library {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(3, 1fr)
+    grid-template-columns: repeat(3, 1fr);
+    gap:10px;
+    padding: 10px;
 }
 
 .library-card {
-    padding: 50px;
-    background-color: lightgrey;
+    padding: 5rem;
+    background-color: lightcyan;
+    display:flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
 
-.library-card-button {
-    width: 100px;}
+
+.add {
+    border-radius: 15px;
+    width: 15rem;
+    background-color:white;
+    font-weight: 500;
+}
+
+.delete {
+    border-radius: 15px;
+    width: 10rem;
+    height: 2rem;
+    background-color:white;
+    color:black;
+    font-weight: 500;
+}
